err/lesioneditor.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lesioneditor'...
Compiling './lib/python3.5/site-packages/lesioneditor/Data.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Data.py", line 278
    print d.labels
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/Form_widget.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Form_widget.py", line 177
    print 'contour fail: ', sys.exc_info()[0]
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lesioneditor/Lesion.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Lesion.py", line 137
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/Lession_editor.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Lession_editor.py", line 1021
    print 'Does not work yet.'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/Lession_editor_slim.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Lession_editor_slim.py", line 277
    print 'key event: ',
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/Lession_editor_slim_test.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/Lession_editor_slim_test.py", line 234
    print 'key event: ',
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/My_table_model.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/My_table_model.py", line 58
    print 'removed label', lbl
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/My_table_model_old.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/My_table_model_old.py", line 74
    print index.row()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lesioneditor/TumorVisualiser.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/TumorVisualiser.py", line 342
    print 'contour fail: ', sys.exc_info()[0]
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lesioneditor/computational_core.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/computational_core.py", line 113
    print 'max_prob = %.3f' % max_prob
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/data_view_widget.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/data_view_widget.py", line 482
    print 'myMousePressEvent: ',
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/hist_widget.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/hist_widget.py", line 303
    print 'hist widget key event: ',
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lesioneditor/icons'...
Compiling './lib/python3.5/site-packages/lesioneditor/mrf_gmm_test.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/mrf_gmm_test.py", line 32
    print 'cv_type: ', cv_type
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/objects_widget.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/objects_widget.py", line 52
    print 'hist widget key event: ',
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/old_Computational_core.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/old_Computational_core.py", line 202
    print 'max_prob = %.3f' % max_prob
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lesioneditor/py3DSeedEditor.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/py3DSeedEditor.py", line 135
    print "problem with zaxis in _rotate_start()"
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lesioneditor/tools.py'...
***   File "./lib/python3.5/site-packages/lesioneditor/tools.py", line 569
    print 'Unknown color, using red as default.'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lesioneditor-0.0.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
